--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Let's Chat!</title>
+	<title ">Let's Chat!</title>
 <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet"><meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -14,14 +14,14 @@
 </head>
 <body>
 <center>
-	<h1 class="header">	
+	<h1 class="header" style="color:black;">	
 		Let's Chat!	<sup>
 	<img src="m2.png">
 	</sup>
 </h1>
 	<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
 	<img src="logo.png" class="logo">
-		<h3 >See what is happening in the world right now</h3>
+		<h3 id="world">See what is happening in the world right now</h3>
 		<h4 >Join The Chat today</h4>
 		<div class="form-group">
 		  <label >User Name:</label>
@@ -29,11 +29,12 @@
 		</div>
 		<button id="login_button" class="btn btn-primary" onclick="addUser()">Log in</button>
 		<br><br>
-	<br><br><br><br><br><br><br><br><br><br><br>
 	</div>
 
+	<br><br><br><br><br><br><br><br><br><br><br>
+
 	<div class="form-group">
-		<h3> Know your friends and Chat limitless Only on LetsChat! </h3>
+		<h3 id="friends"> Know your friends and Chat limitless Only on LetsChat! </h3>
 	</div>
 </center>
 </body>
