--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="kwitter.js"></script>
 <script src="kwitter_room.html"></script>
+<script src="kwitter_room.js"></script>
 </head>
 <body>
 <center>
@@ -27,7 +28,7 @@
 		  <label >User Name:</label>
 			<input type="text" id="txtinput" class="form-control" placeholder="Type Your Username">
 		</div>
-		<button id="login_button" class="btn btn-primary" onclick="addUser()">Log in</button>
+		<button id="login_button" onclick="addUser()" class="btn btn-primary">Log in</button>
 		<br><br>
 	</div>
 
