--- a/kwitter_room.html
+++ b/kwitter_room.html
@@ -34,7 +34,13 @@
 		</div>
 		<button class="btn btn-success" onclick="addRoom()">#Add Room</button>
 		<h3 class="color_white">#TRENDINGROOMS</h3>
-		<div id="output"></div>
+		<div id="output" style="text-align: left;margin-bottom: 70px;"> </div>
+
+		<div class="input_div_message_page">
+			<label>Send:</label>
+			<input type="text" id="msg" class="form-control" placeholder="Type Here">
+			<button onclick="send()" class="btn btn-success">Send</button>
+		</div>
 	</center>
 </div>
 <script src="kwitter_room.js"></script>
